--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -1,42 +1,67 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
 
-name: Dart
+name: Flutter Build and Test
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    branches:
+      - main # Change this to the branch you want to trigger the build on
 
 jobs:
   build:
+    name: Build and Test
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        flutter_version: [2.x]
+
     steps:
-      - uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v2
 
-      # Note: This workflow uses the latest stable version of the Dart SDK.
-      # You can specify other versions if desired, see documentation here:
-      # https://github.com/dart-lang/setup-dart/blob/main/README.md
-      # - uses: dart-lang/setup-dart@v1
-      - uses: dart-lang/setup-dart@9a04e6d73cca37bd455e0608d7e5092f881fd603
+    - name: Setup Flutter
+      uses: subosito/flutter-action@v4
+      with:
+        flutter-version: ${{ matrix.flutter_version }}
 
-      - name: Install dependencies
-        run: dart pub get
+    - name: Cache Flutter SDK
+      uses: actions/cache@v2
+      with:
+        path: ~/.pub-cache
+        key: flutter-pub-cache-${{ runner.os }}-${{ hashFiles('**/pubspec.yaml') }}
 
-      # Uncomment this step to verify the use of 'dart format' on each commit.
-      # - name: Verify formatting
-      #   run: dart format --output=none --set-exit-if-changed .
+    - name: Get dependencies
+      run: flutter pub get
 
-      # Consider passing '--fatal-infos' for slightly stricter analysis.
-      - name: Analyze project source
-        run: dart analyze
+    - name: Analyze code
+      run: flutter analyze
 
-      # Your project will need to have tests in test/ and a dependency on
-      # package:test for this step to succeed. Note that Flutter projects will
-      # want to change this to 'flutter test'.
-      - name: Run tests
-        run: dart test
+    - name: Run tests
+      run: flutter test
+
+    - name: Build APK
+      run: flutter build apk
+
+    - name: Archive artifacts
+      uses: actions/upload-artifact@v2
+      with:
+        name: app-release
+        path: build/app/outputs/flutter-apk/app-release.apk
+
+    - name: Release to Play Store Beta
+      uses: wzieba/gradle-play-publisher@v3
+      with:
+        serviceAccountJson: ${{ secrets.PLAY_STORE_JSON }}
+        packageName: your.package.name
+        track: beta
+        releaseStatus: completed
+
+    - name: Notify on Slack
+      uses: rtCamp/action-slack@v2
+      with:
+        channel: your-slack-channel
+        icon_url: https://your.icon.url.png
+        username: GitHub Actions
+        text: 'The latest build has been successfully deployed to the Google Play Store beta track.'
+      env:
+        SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
