--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ dependencies:
   equatable: ^2.0.5
   flutter:
     sdk: flutter
+  fvm: ^2.4.1
   get: ^4.6.5
   get_it: ^7.6.0
   google_fonts: ^5.1.0
